fix schema and related updates.
