# backend/swagger/user/bookings/schema.yaml
@@ -1,26 +1,3 @@
-BookingPaymentSummary:
-  type: object
-  nullable: true
-  properties:
-    id:
-      type: string
-      format: uuid
-    status:
-      type: string
-      enum: [PENDING, COMPLETED, FAILED, REFUNDED]
-    method:
-      type: string
-      enum: [BANK_ACCOUNT, E_WALLET, PAYPAL, VODAFONE_CASH, FAWRY, INSTAPAY]
-    amount:
-      type: number
-      format: float
-    transactionId:
-      type: string
-      nullable: true
-    createdAt:
-      type: string
-      format: date-time
-
 BookingSummary:
   type: object
   properties:
@@ -73,8 +50,6 @@ BookingSummary:
     review:
       type: string
       nullable: true
-    payment:
-      $ref: "#/components/schemas/BookingPaymentSummary"
     createdAt:
       type: string
       format: date-time
